--- a/index.html
+++ b/index.html
@@ -6,5 +6,6 @@
 </head>
 <body>
     <iframe frameborder="0" width="100%" height="600px" src="https://replit.com/@SumeMonty/Cyber-Calculator?lite=1&outputonly=1"></iframe>
+    <a href="www.google.com"><button>button</button></a>
 </body>
 </html>
